CloudFormation/createSG.yml
AWSTemplateFormatVersion: 2010-09-09

Description: create SecurityGroup for Reptalicious ec site

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Name base
        Parameters:
          - Namebase
      - Label:
          default: Security Group Config
        Parameters:
          - MyIp
    ParameterLabels:
      MyIp:
        default: your IP address

Parameters:
  Namebase:
    Type: String
    Default: reptalicious

  MyIp:
    Description: enter your IP address
    Type: String
    Default: ''

Resources:
  # ECS用セキュリティグループ作成
  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub ${Namebase}-ECS-SecurityGroup
      GroupName: !Sub ${Namebase}-ECS-SecurityGroup
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Sub ${MyIp}/32
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref ALBSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${Namebase}-ECS-SecurityGroup
      VpcId: !ImportValue VPCId

  # RDS用セキュリティグループ作成
  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub ${Namebase}-RDS-SecurityGroup
      GroupName: !Sub ${Namebase}-RDS-SecurityGroup
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref ECSSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub ${Namebase}-RDS-SecurityGroup
      VpcId: !ImportValue VPCId

  # ALB用セキュリティグループ作成
  ALBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub ${Namebase}-ALB-SecurityGroup
      GroupName: !Sub ${Namebase}-ALB-SecurityGroup
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${Namebase}-ALB-SecurityGroup
      VpcId: !ImportValue VPCId

Outputs:
  ECSSecurityGroupId:
    Value: !Ref ECSSecurityGroup
    Export:
      Name: ECSSecurityGroupId

  RDSSecurityGroupId:
    Value: !Ref RDSSecurityGroup
    Export:
      Name: RDSSecurityGroupId

  ALBSecurityGroupId:
    Value: !Ref ALBSecurityGroup
    Export:
      Name: ALBSecurityGroupId
